--- a/crud.html
+++ b/crud.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="container">
-    <h2 class="header">CRUD Operation</h2>
+    <h2 class="header">CRUD Operation with JS</h2>
     <div class="row">
       <div class="form_group">
         <div class="form_detail">
